external-crates/move/crates/move-compiler/tests/move_2024/parser/mut_field_pun_invalid_pack.exp
error[E01002]: unexpected token
  ┌─ tests/move_2024/parser/mut_field_pun_invalid_pack.move:6:13
  │
6 │         S { mut f }
  │             ^^^
  │             │
  │             Unexpected 'mut'
  │             Expected an identifier

error[E01002]: unexpected token
  ┌─ tests/move_2024/parser/mut_field_pun_invalid_pack.move:6:13
  │
6 │         S { mut f }
  │             ^^^
  │             │
  │             Unexpected 'mut'
  │             Expected a module member: 'spec', 'use', 'friend', 'const', 'fun', or 'struct'

error[E04007]: incompatible types
  ┌─ tests/move_2024/parser/mut_field_pun_invalid_pack.move:6:13
  │
4 │     public fun foo(): S {
  │                       - Expected: 'a::m::S'
5 │         let f = 0;
6 │         S { mut f }
  │             ^^^
  │             │
  │             Invalid return expression
  │             Given: '()'

