external-crates/move/crates/move-compiler/tests/move_2024/parser/mut_field_pun_invalid_pack.move
module a::m {
    public struct S { f: u64 }

    public fun foo(): S {
        let _f = 0u64;
        S { mut f }
    }
}
